# electronics_circuit_evaluation_ros2

electronics_circuit_evaluation/: package.xml  setup.py
electronics_circuit_evaluation/electronics_circuit_evaluation/: connectivity_node.py  detection_node.py  image_publisher_node.py  orientation_node.py
electronics_circuit_evaluation/launch/: detection_pipeline_launch.py
electronics_circuit_evaluation_msgs/msg/: Netlist.msg  OrientedComponentArray.msg
src/electronics_circuit_evaluation/: setup.cfg  setup.py
src/electronics_circuit_evaluation/electronics_circuit_evaluation/: evaluation_node.py  orientation_node.py
src/electronics_circuit_evaluation/launch/: evaluation_pipeline_launch.py
src/electronics_circuit_evaluation_msgs/: CMakeLists.txt  package.xml
src/electronics_circuit_evaluation_msgs/msg/: Detection.msg  EvaluationResult.msg  OrientedComponent.msg
