<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>electronics_circuit_evaluation</name>
  <version>0.0.1</version>
  <description>Nodes for electronics circuit evaluation</description>
  <maintainer email="dimitar.dimeski23@gmail.com">dimitar</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>electronics_circuit_evaluation_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
